  names that START with a digit that aren't accepted by vault guards, and it
  applies to all platforms.
* Fix ring of sustain ability blocking -1 strength change when becoming weak
  from hunger, allowing it to be exploited to gain strength on demand.
* Fix off-hand weapon properties remaining after ending two-weapon combat.

Dungeon
-------
* Changes to Gehennom:
    - Mazes completely removed from Gehennom!  Both fill levels and filler
      around special levels consist of lava caverns.
    - Add demon lairs for Demogorgon, Geryon, Dispater, and Yeenoghu (from
      GruntHack).
* Changes to the Town branch:
    - Nymph level is now guaranteed and appears between the Town surface and
      filler levels.
    - Town surface level has larger shops.
* Changes to Vlad's Tower:
    - New entrance level to Vlad's Tower with trees, water, vampires, zombies,
      ravens and a drawbridge entrance leading to the traditional tower levels
      (from dNetHack).
* Sokoban prizes moved to Mines End; the end of Sokoban now has a guaranteed
  sack containing 8 rings and wands (the ring and wand on each level has been
  removed as a result).  This makes Sokoban much more optional in DynaHack than
  it is in NetHack.
* Remove lava from one of the versions of the Castle level.
* Levels between Medusa's Island and the Castle are now water caverns instead of
  lava caverns, and have less evil monsters.
* Allow magic mapping of the Valley of the Dead and the last Dragon Caves level.
* Iron bars can be dissolved by acid (from UnNetHack).
* Destroying iron bars in Sokoban counts against its shortcut conduct.
* Drawbridge instant death removed: drawbridges can only be destroyed by force
  bolts when closed, not open.
* Prevent magic traps from being created above dungeon level 5.
* Fix the cosmetic issue of horizontally-flipped levels appearing slightly
  misaligned in the map area.
* Fix waking monsters level-wide when entering courts, swamps, morgues, zoos and