@@ -118,6 +118,8 @@ Character
 
 Dungeon
 -------
+* Changes to standard rooms-and-corridors level generation:
+    - Grid room level style (from K-Mod).
 * Changes to Gehennom:
     - Mazes completely removed from Gehennom!  Both fill levels and filler
       around special levels consist of lava caverns.
